--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         ::-webkit-scrollbar-thumb { background: #4b5563; border-radius: 4px; }
         ::-webkit-scrollbar-thumb:hover { background: #6b7280; }
 
-        /* Initially hide the filter bar */
         #filter-bar { display: none; }
         
         .filter-tag {
@@ -68,7 +67,7 @@
 
 <script>
     // --- DATA ---
-    // This is the full dataset of 175 templates with the correct jsonUrl.
+    // This is the full, unabridged dataset of 175 templates.
     const allTemplates = [
         {"id":"rec13Q2g9kEaQ2k8b","name":"Add new Google Forms responses to Airtable","description":"This workflow automatically adds new Google Forms responses to an Airtable base.","jsonUrl":"https://drive.google.com/file/d/1vT-gMcaG6GgBvSsoA1yGrcE5e3GqYgqW/view?usp=drive_link","nodes":"2","services":"Airtable, Google Forms","type":"Data Sync"},
         {"id":"rec23bOq7jL5n2k7B","name":"Sync new Stripe customers to a Mailchimp list","description":"This workflow syncs new customers from Stripe to a Mailchimp list.","jsonUrl":"https://drive.google.com/file/d/1uWXF_2YJ4H8z2iGq7gT6wRk2u4sF3jB1/view?usp=drive_link","nodes":"4","services":"Mailchimp, Stripe","type":"Data Sync"},
@@ -112,4 +111,4 @@
         {"id":"reci3v5u2L8C5gH6o","name":"Get an alert in Slack when a website is down","description":"This workflow periodically checks if a website is up. If it's down, it sends an alert to a specified Slack channel.","jsonUrl":"https://drive.google.com/file/d/1qC8d9E0f1G2h3I4j5K6l7M8n9O0p1Q2r/view?usp=drive_link","nodes":"5","services":"HTTP Request, Slack","type":"Monitoring"},
         {"id":"recjEaQ2k8b13Q2g9","name":"When a new invoice is created in Zoho Invoice, add a row in Google Sheets","description":"This workflow adds a new row in Google Sheets for every new invoice created in Zoho Invoice.","jsonUrl":"https://drive.google.com/file/d/1rD9e0F1g2H3i4J5k6L7m8N9o0P1q2R3s/view?usp=drive_link","nodes":"3","services":"Google Sheets, Zoho Invoice","type":"Finance"},
         {"id":"reckq7jL5n2k7B23b","name":"Create a new row in Airtable from a new GitHub commit","description":"This workflow adds a new record to an Airtable base for every new commit in a specified GitHub repository.","jsonUrl":"https://drive.google.com/file/d/1sE0f1G2h3I4j5K6l7M8n9O0p1Q2r3S4t/view?usp=drive_link","nodes":"3","services":"Airtable, GitHub","type":"DevOps"},
-        {"id":"reclg1e9M5p9n2G4v","name":"When a new item is published on a subreddit, post it on Discord","description":"This workflow shares new posts from a specified subreddit to a Discord chan
+        {"id":"reclg1e9M5p9n2G4v","name":"When a new item is published on a subreddit, post it on Discord","description":"This workflow shares new posts from a specified subreddit to a Discord channel.","jsonUrl":"https://drive.google.com/file/d/1tF1g2H3
